Build issue fix

--- a/MavenWeb/.gitignore
+++ b/MavenWeb/.gitignore
@@ -10461,3 +10461,19 @@
 /target/
 /target/
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
